--- a/index.qmd
+++ b/index.qmd
@@ -31,9 +31,9 @@ body {
 
 .wrapper {
     display: grid;
-    grid-gap: 2px;
-    grid-template-columns: 220px 220px 220px 550px;
-    grid-template-rows: 160px 160px 160px 160px;
+    grid-gap: 1px;
+    grid-template-columns: 225px 225px 225px 410px;
+    grid-template-rows: 95px 95px 95px 130px;
     background-color: #772953;
     color: "#772953";
   }
@@ -89,7 +89,8 @@ loc <- rgeomex::extract_locality(cve_edo = "19",
                                               "San Nicolás de los Garza"))
 
 # Step 2. Extract the hotspots ####
-hotspots <- denmex::den_hotspots[loc, ]
+#hotspots <- denmex::den_hotspots[loc, ]
+hotspots <- hotspotsdata::hotspots_hex[loc,]
 mapview::mapview(hotspots,
                  zcol = "intensity_gi",
                  layer.name = "Intensidad",
@@ -241,58 +242,7 @@ flexdashboard::gauge(round((sum(y_hot$n_cases)/sum(y$n_cases))*100, digits = 1),
 
 <html>
 <head>
-```{=html}
-<style>
-body {
-  margin: 0px;
-  width: auto; 
-  height: auto;
-}
 
-.wrapper {
-    display: grid;
-    grid-gap: 2px;
-    grid-template-columns: 220px 220px 220px 550px;
-    grid-template-rows: 160px 160px 160px 160px;
-    background-color: #772953;
-    color: "#772953";
-  }
-
-  .box {
-    background-color: #772953;
-    color: "#772953";
-    border-radius: 2px;
-    padding: 5px;
-    font-size: 100%;
-
-  }
-
-  .a {
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-  }
-  .b {
-    grid-column: 4 ;
-    grid-row: 1 / 3;
-  }
-  .c {
-    grid-column: 4 ;
-    grid-row: 3 / 5 ;
-  }
-  .d {
-    grid-column: 3;
-    grid-row: 4;
-  }
-  .e {
-    grid-column: 2;
-    grid-row: 4;
-  }
-  .f {
-    grid-column: 1;
-    grid-row: 4;
-  }
-</style>
-```
 </head>
 <body>
 ::: wrapper
@@ -455,58 +405,7 @@ flexdashboard::gauge(round((sum(y_hot$n_cases)/sum(y$n_cases))*100, digits = 1),
 
 <html>
 <head>
-```{=html}
-<style>
-body {
-  margin: 0px;
-  width: auto; 
-  height: auto;
-}
 
-.wrapper {
-    display: grid;
-    grid-gap: 2px;
-    grid-template-columns: 220px 220px 220px 550px;
-    grid-template-rows: 160px 160px 160px 160px;
-    background-color: #772953;
-    color: "#772953";
-  }
-
-  .box {
-    background-color: #772953;
-    color: "#772953";
-    border-radius: 2px;
-    padding: 5px;
-    font-size: 100%;
-
-  }
-
-  .a {
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-  }
-  .b {
-    grid-column: 4 ;
-    grid-row: 1 / 3;
-  }
-  .c {
-    grid-column: 4 ;
-    grid-row: 3 / 5 ;
-  }
-  .d {
-    grid-column: 3;
-    grid-row: 4;
-  }
-  .e {
-    grid-column: 2;
-    grid-row: 4;
-  }
-  .f {
-    grid-column: 1;
-    grid-row: 4;
-  }
-</style>
-```
 </head>
 <body>
 ::: wrapper
@@ -670,58 +569,7 @@ flexdashboard::gauge(round((sum(y_hot$n_cases)/sum(y$n_cases))*100, digits = 1),
 
 <html>
 <head>
-```{=html}
-<style>
-body {
-  margin: 0px;
-  width: auto; 
-  height: auto;
-}
 
-.wrapper {
-    display: grid;
-    grid-gap: 2px;
-    grid-template-columns: 220px 220px 220px 550px;
-    grid-template-rows: 160px 160px 160px 160px;
-    background-color: #772953;
-    color: "#772953";
-  }
-
-  .box {
-    background-color: #772953;
-    color: "#772953";
-    border-radius: 2px;
-    padding: 5px;
-    font-size: 100%;
-
-  }
-
-  .a {
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-  }
-  .b {
-    grid-column: 4 ;
-    grid-row: 1 / 3;
-  }
-  .c {
-    grid-column: 4 ;
-    grid-row: 3 / 5 ;
-  }
-  .d {
-    grid-column: 3;
-    grid-row: 4;
-  }
-  .e {
-    grid-column: 2;
-    grid-row: 4;
-  }
-  .f {
-    grid-column: 1;
-    grid-row: 4;
-  }
-</style>
-```
 </head>
 <body>
 ::: wrapper
@@ -886,58 +734,7 @@ flexdashboard::gauge(round((sum(y_hot$n_cases)/sum(y$n_cases))*100, digits = 1),
 
 <html>
 <head>
-```{=html}
-<style>
-body {
-  margin: 0px;
-  width: auto; 
-  height: auto;
-}
 
-.wrapper {
-    display: grid;
-    grid-gap: 2px;
-    grid-template-columns: 220px 220px 220px 550px;
-    grid-template-rows: 160px 160px 160px 160px;
-    background-color: #772953;
-    color: "#772953";
-  }
-
-  .box {
-    background-color: #772953;
-    color: "#772953";
-    border-radius: 2px;
-    padding: 5px;
-    font-size: 100%;
-
-  }
-
-  .a {
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-  }
-  .b {
-    grid-column: 4 ;
-    grid-row: 1 / 3;
-  }
-  .c {
-    grid-column: 4 ;
-    grid-row: 3 / 5 ;
-  }
-  .d {
-    grid-column: 3;
-    grid-row: 4;
-  }
-  .e {
-    grid-column: 2;
-    grid-row: 4;
-  }
-  .f {
-    grid-column: 1;
-    grid-row: 4;
-  }
-</style>
-```
 </head>
 <body>
 ::: wrapper
@@ -1102,58 +899,7 @@ flexdashboard::gauge(round((sum(y_hot$n_cases)/sum(y$n_cases))*100, digits = 1),
 
 <html>
 <head>
-```{=html}
-<style>
-body {
-  margin: 0px;
-  width: auto; 
-  height: auto;
-}
 
-.wrapper {
-    display: grid;
-    grid-gap: 2px;
-    grid-template-columns: 220px 220px 220px 550px;
-    grid-template-rows: 160px 160px 160px 160px;
-    background-color: #772953;
-    color: "#772953";
-  }
-
-  .box {
-    background-color: #772953;
-    color: "#772953";
-    border-radius: 2px;
-    padding: 5px;
-    font-size: 100%;
-
-  }
-
-  .a {
-    grid-column: 1 / 4;
-    grid-row: 1 / 4;
-  }
-  .b {
-    grid-column: 4 ;
-    grid-row: 1 / 3;
-  }
-  .c {
-    grid-column: 4 ;
-    grid-row: 3 / 5 ;
-  }
-  .d {
-    grid-column: 3;
-    grid-row: 4;
-  }
-  .e {
-    grid-column: 2;
-    grid-row: 4;
-  }
-  .f {
-    grid-column: 1;
-    grid-row: 4;
-  }
-</style>
-```
 </head>
 <body>
 ::: wrapper
